src/test/resources/AttributeCheck/positive/LanguageSpecification3.ls
class A {

  p ("${b : B}") {}

}

class B {

  syn a : int;

  b ("") {
    this.a = 1303;
  }
}
