src/test/resources/AttributeCheck/negative/MissingAttributeDefinitionThis.ls
class A {

  syn a : int;

  p ("") {}

}
